--- a/Vistas/css/login.css
+++ b/Vistas/css/login.css
@@ -22,3 +22,5 @@ padding : 100px 0;
 .banner-text h2{color:#fff; font-weight:600;}
 .banner-text h2:after{content:" "; width:100px; height:5px; background:#FFF; display:block; margin-top:20px; border-radius:3px;}
 .banner-text p{color:#fff;}
+#registrarse {background: rgb(224, 119, 119); color:#fff; font-weight:600;}
+#entrarVis {background: rgb(59, 167, 255); color:#fff; font-weight:600;}
